--- a/python-libraries-code.html
+++ b/python-libraries-code.html
@@ -48,7 +48,7 @@
     <div class="container">
         <h1>Python Source Code</h1>
         <p>
-            The Silver Phoenix Engine runs on two Python libraries—Engine 1 for relationships, Engine 2 for data and mappings. Below is the core code, powering connections like D1’s distance and D4’s duration.
+            The Silver Phoenix Engine runs on two Python libraries—Engine 1 for relationships, Engine 2 for data and mappings. Below is the core structure, powering connections like D1’s distance and D4’s duration. Full code available at [GitHub repo, TBD].
         </p>
         <h2>Engine 1 - Relationships</h2>
         <p>
@@ -114,7 +114,7 @@
             <li>pickle: Serializes engine state for backups.</li>
         </ul>
         <p>
-            This code’s the blueprint—run it to start mapping the universe’s 17.3 million relationships.
+            This outlines the engine’s logic—grab the full scripts from the repo when ready to map 17.3 million relationships.
         </p>
         <p><a href="python-libraries.html">Back to Libraries</a> | <a href="index.html">Home</a></p>
     </div>
