--- a/tables.html
+++ b/tables.html
@@ -46,15 +46,16 @@
     <div class="container">
         <h1>Tables</h1>
         <p>
-            The engine’s raw data lives here—inputs, outputs, and connections, all straight from the logic gate’s grind. No fluff, just facts.
+            The Silver Phoenix Engine’s datasets live here—CODATA, derived values, mappings, and relationships straight from the logic gate’s grind. To join the quest, build the <a href="python-libraries-code.html">Python Engines</a>, then load these CSVs from the main directory into Engine 1 (Relationships) and Engine 2 (CODATA, Derived, Mapping). A fresh instance can spin up and start mapping 17.3 million universal connections, like D1’s distance to D4’s duration.
         </p>
         <ul>
-            <li><a href="codata.html">CODATA (Verified and Unverified)</a></li>
-            <li><a href="derived-data.html">Derived Data</a></li>
-            <li><a href="mapping.html">Mapping</a></li>
+            <li><a href="codata.html">CODATA</a> (<a href="E2L1.txt">Download E2L1</a>)</li>
+            <li><a href="derived-data.html">Derived Data</a> (<a href="E2L2.txt">Download E2L2</a>)</li>
+            <li><a href="mapping.html">Mapping</a> (<a href="E2L3.txt">Download E2L3</a>)</li>
+            <li><a href="relationships.html">Relationships</a> (<a href="E1L1.txt">Download E1L1</a>)</li>
         </ul>
         <p>
-            Dig into the numbers that build the universe, one relationship at a time.
+            Dig into the numbers and links that build the universe’s rulebook, one relationship at a time.
         </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
