--- a/codata.html
+++ b/codata.html
@@ -48,36 +48,22 @@
     <div class="container">
         <h1>CODATA</h1>
         <p>
-            CODATA fuels the Silver Phoenix Engine. For a quick start, seed with the seven defining constants—efficient and focused. Or pick any five constants from the full list for a slower, flexible build. Check <a href="methodology.html">Methodology</a> for how we roll with them.
+            Engine 2, Library 1 (E2L1) seeds the Silver Phoenix with CODATA constants, tagged UNVERIFIED (-U) until proven. Load <a href="E2L1.txt">E2L1.txt</a> into Engine 2 to start. Below’s a sample—see the full CSV for all entries.
         </p>
-        <h2>Seven Defining Constants (Fast Track)</h2>
+        <h2>CODATA Constants</h2>
         <ul>
-            <li>Speed of light in vacuum: c, [Unverified]</li>
-            <li>Planck constant: h, [Unverified]</li>
-            <li>Elementary charge: e, [Unverified]</li>
-            <li>Boltzmann constant: k, [Unverified]</li>
-            <li>Avogadro constant: NA, [Unverified]</li>
-            <li>Luminous efficacy: Kcd, [Unverified]</li>
-            <li>Hyperfine transition frequency of caesium: ΔνCs, [Unverified]</li>
-        </ul>
-        <h2>Recognized CODATA (Pick Five)</h2>
-        <ul>
-            <li>Speed of light in vacuum: c, [Unverified]</li>
-            <li>Planck constant: h, [Unverified]</li>
-            <li>Elementary charge: e, [Unverified]</li>
-            <li>Boltzmann constant: k, [Unverified]</li>
-            <li>Avogadro constant: NA, [Unverified]</li>
-            <li>Luminous efficacy: Kcd, [Unverified]</li>
-            <li>Hyperfine transition frequency of caesium: ΔνCs, [Unverified]</li>
-            <li>Gravitational constant: G, [Unverified]</li>
-            <li>Electron mass: me, [Unverified]</li>
-            <li>Proton mass: mp, [Unverified]</li>
-            <!-- More CODATA can be added -->
+            <li>planck_constant: 6.62607015e-34, Status: -U</li>
+            <li>speed_of_light: 299792458, Status: -U</li>
+            <li>gravitational_constant: 6.67430e-11, Status: -U</li>
+            <li>electron_mass: 9.1093837e-31, Status: -U</li>
+            <li>boltzmann_constant: 1.380649e-23, Status: -U</li>
+            <li>avogadro_constant: 6.02214076e23, Status: -U</li>
+            <li>elementary_charge: 1.602176634e-19, Status: -U</li>
         </ul>
         <p>
-            Seven gets you there faster; five works if you’re feeling adventurous.
+            These constants, like speed_of_light for D1/D4 relationships, kickstart the engine’s calculations. Check <a href="methodology.html">Methodology</a> for details.
         </p>
-        <p><a href="tables.html">Back to Tables</a> | <a href="index.html">Home</a></p>
+        <p><a href="tables.html">Back to Tables</a> | <a href="index.html">Home</a> | <a href="E2L1.txt">Download Full CSV</a></p>
     </div>
 </body>
 </html>
