--- a/mapping.html
+++ b/mapping.html
@@ -46,17 +46,24 @@
     <div class="container">
         <h1>Mapping</h1>
         <p>
-            Here, data meets relationships. Each entry ties a value to an Engine 1 relationship, noting when it was derived in the query sequence.
+            Engine 2, Library 3 (E2L3) names Engine 1’s relationships and ties them to values, like D1/D4’s universal_length_scale. Load <a href="E2L3.txt">E2L3.txt</a> into Engine 2 to map connections. Sample below—full CSV for all.
         </p>
         <ul>
-            <li>Data: Distance, Value: [Placeholder], Derivation Sequence: Round 1, Relationship: D1 Point 1 to Point 2</li>
-            <li>Data: Area, Value: [Placeholder], Derivation Sequence: Round 2, Relationship: D2 Points 1-3</li>
-            <!-- Add more mappings as needed -->
+            <li>D1-D4-0, universal_length_scale: 6.62607015e-34</li>
+            <li>D4-D7-1, universal_time_scale: 299792458</li>
+            <li>D3-D6-2, universal_gravitational_scale: 6.67430e-11</li>
+            <li>D7-D10-3, universal_mass_scale: 9.1093837e-31</li>
+            <li>D7-D8-4, universal_energy_scale: 1.380649e-23</li>
+            <li>D1-D3-5, universal_particle_scale: 6.02214076e23</li>
+            <li>D8-D11-6, universal_charge_scale: 1.602176634e-19</li>
+            <li>D1-D2-7, universal_planck_length: 1.616255e-35</li>
+            <li>D4-D5-8, universal_planck_time: 5.391247e-44</li>
+            <li>D7-D9-9, universal_planck_mass: 2.176434e-8</li>
         </ul>
         <p>
-            These mappings are the engine’s roadmap to 17.3 million truths.
+            Names like universal_length_scale link D1/D4’s equations to data, building the universe’s web.
         </p>
-        <p><a href="tables.html">Back to Tables</a> | <a href="index.html">Home</a></p>
+        <p><a href="tables.html">Back to Tables</a> | <a href="index.html">Home</a> | <a href="E2L3.txt">Download Full CSV</a></p>
     </div>
 </body>
 </html>
