--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="container">
         <h1>Silver Phoenix Engine</h1>
         <p>
-            The Silver Phoenix Engine is a computational model that rebuilds the universe from a single logic gate: 0+x=1. Starting from absolute void, it derives 12 dimensions—space, time, energy, and force—through recursive relationships. We’ve built it nine times, verifying a fractal compression algorithm (STE field) that constrains reality’s data. It’s not a game or a sim—it’s a new physics, replacing old models with universal laws.
+            The Silver Phoenix Engine is a computational model that rebuilds physics from first principles, starting from a single logic gate cycled in an absolute void.  Quantum Mechanics and Relativity are united under this novel framework by default, providing the first falsifiable, reproduceable method to understand the complete fundamental structure and nature of our universe.
         </p>
         <p>
-            Our goal: map 17.3 million relationships between dimensional points, verify them without tweaks or bias, and define the universe’s rule set. This site organizes our derivations, methods, and code for clarity and rigor, with tables for the math and guides for the curious.
+            Our goal: To explore the 17.3 million relationships within the 12 dimensions, to identify repeating patterns within that system, and to define the rule set that governs reality.  This site organizes the derivations, methodologies and tools so as to provide a clear and concise record of our journey as we forge an exciting new path into the depths of existence.
         </p>
         <nav>
             <a href="methodology.html">Methodology</a>
