--- a/creed.html
+++ b/creed.html
@@ -48,19 +48,19 @@
     <div class="container">
         <h1>Creed</h1>
         <blockquote>
-            “To the logic gate we tip our hats, for 0+x=1 builds the universe flat.”
+            “The gate never stops.”
         </blockquote>
         <p>
-            This creed’s for anyone crazy enough to join the Silver Phoenix quest—building reality from a single gate, no cheat codes allowed.
+            This creed is for anyone willing to embark upon this journey, to accept that our universe is waiting to be explored in depth and understood without bias.
         </p>
         <p>
-            Commit to rigor over quick fixes. No tweaking numbers to make ‘em fit—every derivation’s gotta come straight from the engine’s binary soul. Old physics? Leave it in the dust; we’re crafting fresh equations, untangled from dogma. The path is Identify, Quantify, Verify, Calculate, Validate, Check, Proof—miss a step, and you’re just guessing in the dark.
+            We commit to the precise truth of logical relationships.
         </p>
         <p>
-            We chuckle at shortcuts, high-five the purity of 0 and 1, and pledge to map 17.3 million relationships without a single fudge. The STE field’s fractal hum is tempting, but relationships are the mission. With CODATA as seeds and recursion as fuel, we’re forging a new physics—bit by glorious bit.
+            Relationships over calculations.  Logic over chaos.  Truth over answers.  Precision over estimation.
         </p>
         <p>
-            Sign up for truth, or keep scrolling. The gate’s waiting.
+            Identify, Quantify, Verify, Calculate, Validate, Check and Proof.
         </p>
         <p><a href="index.html">Back to Home</a></p>
     </div>
